Update JEI plugin